[package]
name = "goshimmer_network"
version = "0.1.0"
authors = ["/alex/ <al3k5@protonmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "goshimmer_network"
path = "src/lib.rs"

[[bin]]
name = "goshimmer_network"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
bs58 = "0.4.0"
bytes = "1.0.1"
iota-crypto = { version = "0.6.0", features = ["ed25519", "random", "sha" ] }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
prost = "0.7.0"
prost-build = "0.7.0"
ring = "0.16.20"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
structopt = "0.3.22"
yaml-rust = "0.4.5"

[build-dependencies]
prost-build = "0.8.0"
